# Mehawk

./: .clang-format  .clang-tidy  .deepsource.toml  .gitignore  Justfile  README.md  README.norg  flake.nix  meson.build
.github/: CODEOWNERS
.github/workflows/: convert-norg-to-md-on-release.yml  convert-norg-to-md.yml
docs/: architecture.md  architecture.norg  technicalities.md  technicalities.norg
include/glad/: gl.h
nix/: dependencies.nix
nix/pkg-config/: expected.pc  libassert.pc  optional.pc
src/: glad.c  main.cpp  meson.build
src/glad/: glad.h
src/mehawk/: app.cpp  app.hpp  app_config.cpp  app_config.hpp  concepts.hpp  enum_formatter.hpp  env.cpp  global_config.cpp  global_config.hpp  main.cpp  os_detection.hpp  pch.hpp  prelude.hpp  standard_paths.cpp  standard_paths.hpp  static_config.hpp
src/mehawk/env/: env.hpp
src/mehawk/logger/: logger.hpp
subprojects/: .gitignore  dpp.wrap  efsw.wrap  expected.wrap  libassert.wrap  optional.wrap
subprojects/packagefiles/dpp/: dpp-selfbot.patch
test/: meson.build  test.cpp
tools/: commit_generated_md_files_if_changed  convert_norg_to_markdown  find_md_files  init.lua
